nmea_parser and imu_data_parser

--- a/imu_data.ipynb
+++ b/imu_data.ipynb
@@ -25,19 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Transform the huge csv to dataframe."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Transform the huge csv to dataframe.\n",
     "df = pd.DataFrame(pd.read_csv(path, sep=','))"
    ]
   },
